<resources>
    <string name="app_name">InvoluteCalculator - beta</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="quit">Quit</string>
    <string name="parameter">Parameter</string>
    <string name="teeth_number">Teeth Number</string>
    <string name="normal_module">Normal Module</string>
    <string name="transverse_module">Transverse Module</string>
    <string name="axial_module">Axial Module</string>
    <string name="base_module">Base Module</string>
    <string name="normal_pressure">Normal Pressure</string>
    <string name="pressure_angle">Transverse Pressure</string>
    <string name="helix_angle">Helix Angle</string>
    <string name="lead_angle">Lead Angle</string>
    <string name="reference_diameter">Reference Diameter</string>
    <string name="base_diameter">Base Diameter</string>
    <string name="fixed">Fixed</string>
    <string name="value">Value</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contradiction">Contradiction</string>
    <string name="nosolution">no solution</string>
</resources>
