<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ptb.length.involutecalculator.controller.MainActivity">
    
    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="1dp"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" android:id="@+id/linearLayout">
            <Button
                    android:text="@string/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/clearBtn" android:layout_weight="1"/>
            <Button
                    android:text="@string/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/calculateBtn" android:layout_weight="1"/>
            <Button
                    android:text="@string/quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/QuitBtn" android:layout_weight="1"/>
        </LinearLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true">
    
            <android.support.v4.view.ViewPager
                    android:id="@id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/linearLayout3">
            </android.support.v4.view.ViewPager>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/linearLayout3">
                <TextView
                        android:text="@string/parameter"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20dp"/>
                <TextView
                        android:text="@string/teeth_number"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/normal_module"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/transverse_module"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView4"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/axial_module"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView5"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/base_module"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView6"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/normal_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView7"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/pressure_angle"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView8"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/helix_angle"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView9"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/lead_angle"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView10"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/reference_diameter"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView11"
                        android:layout_weight="1"
                        android:gravity="center"/>
                <TextView
                        android:text="@string/base_diameter"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/textView12"
                        android:layout_weight="1"
                        android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
